--- a/app/src/main/res/layout/news_rows.xml
+++ b/app/src/main/res/layout/news_rows.xml
@@ -9,7 +9,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="380dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:elevation="12dp"
         app:cardCornerRadius="5dp">
@@ -18,7 +18,7 @@
             android:id="@+id/dateCardView"
             android:layout_width="match_parent"
             android:layout_height="25dp"
-            android:alpha="0.8"
+            android:alpha="0.6"
             android:elevation="5dp"
             app:cardCornerRadius="8dp">
 
