--- a/app/src/main/res/layout/news_rows.xml
+++ b/app/src/main/res/layout/news_rows.xml
@@ -1,80 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_width="match_parent"
     android:padding="5dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="380dp"
         android:layout_alignParentTop="true"
         android:elevation="12dp"
+        android:layout_width="match_parent"
         app:cardCornerRadius="5dp">
 
         <android.support.v7.widget.CardView
             android:id="@+id/dateCardView"
-            android:layout_width="match_parent"
             android:layout_height="25dp"
-            android:alpha="0.6"
+            android:alpha="0.8"
             android:elevation="5dp"
+            android:layout_width="match_parent"
             app:cardCornerRadius="8dp">
 
             <TextView
                 android:id="@+id/date"
+                android:text="25 May 19"
                 android:layout_width="match_parent"
+                android:textAlignment="center"
                 android:layout_height="match_parent"
                 android:background="@color/blue_900"
-                android:text="25 May 19"
-                android:textAlignment="center"
                 android:textStyle="bold" />
 
 
         </android.support.v7.widget.CardView>
-
         <RelativeLayout
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_width="match_parent"
             android:padding="4dp">
-
             <ImageView
                 android:id="@+id/newsimageid"
+                android:scaleType="fitCenter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:cropToPadding="true"
-                android:scaleType="fitCenter"
                 android:src="@drawable/pjcv" />
 
             <TextView
                 android:id="@+id/newsTitle"
+                android:text="Title"
+                android:textSize="17sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/newsimageid"
                 android:padding="5dp"
-                android:text="Title"
-                android:textSize="17sp"
                 android:textStyle="bold" />
-
             <TextView
                 android:id="@+id/author"
-                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/newsTitle"
                 android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                 android:padding="5dp"
                 android:text="Author: PJ Maraba"
+                android:layout_width="match_parent"
                 android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/descriptionNews"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:layout_below="@+id/author"
                 android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_height="wrap_content"
                 android:text="News  goes here" />
 
 
