--- a/app/src/main/res/layout/news_rows.xml
+++ b/app/src/main/res/layout/news_rows.xml
@@ -8,7 +8,7 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
-        android:layout_height="380dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:elevation="12dp"
         android:layout_width="match_parent"
@@ -42,6 +42,7 @@
                 android:scaleType="fitCenter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
                 android:adjustViewBounds="true"
                 android:cropToPadding="true"
                 android:src="@drawable/pjcv" />
